<resources>
    <string name="app_name">LjFit</string>
    <string name="dica_email">Digite seu email</string>
    <string name="dica_senha">Digite sua senha</string>
    <string name="botao_entrar">Entrar</string>
    <string name="botao_registrar">Registrar</string>
    <string name="planos">Meus planos de treino</string>
    <string name="descricao_planos">Lista de planos de treino</string>
    <string name="nome_do_plano_de_treino">Nome do Plano de Treino</string>
    <string name="deletar_plano">Deletar plano</string>
    <string name="rotinas">Minhas rotinas</string>
    <string name="descricao_rotinas">Lista de rotinas de treino</string>
    <string name="botao_voltar">Voltar</string>
    <string name="botao_logout">Sair</string>
    <string name="planosmenu">Planos</string>
    <string name="exerciciosmenu">Exercícios</string>
    <string name="contamenu">Perfil</string>"
    <string name="excluir_exercicio">Excluir exercício</string>
    <string name="nome_do_exerc_cio">Nome do exercício</string>
    <string name="exerc_cios_da_rotina">Exercícios da Rotina</string>
    <string name="lista_de_exerc_cios_da_rotina">Lista de exercícios da rotina</string>
    <string name="repeti_es">Repetições</string>
    <string name="s_ries">Séries</string>
    <string name="peso_kg">Peso (kg)</string>
    <string name="lista_de_exerc_cios">Lista de exercícios</string>
    <string name="buscar_exerc_cio_por_nome">Buscar exercício por nome</string>
    <string name="grupo_muscular">Grupo Muscular</string>
    <string name="nome_da_rotina">Nome da Rotina</string>
    <string name="deletar">Deletar</string>
    <string name="botao_adicionar">+</string>
    <string name="rotinas_editar">Editar rotina</string>
    <string name="planos_editar">Editar plano</string>
    <string name="exercicios_editar">Editar exercício</string>
    <string name="selecao_grupo_muscular">Selecione um grupo muscular</string>
    <string name="exercicios_da_rotina_dados">Séries: 4 • Reps: 12 • Peso: 60kg</string>
    <string name="diasemana">Segunda-feira</string>
    <string name="logo_do_aplicativo">logo do aplicativo</string>
    <string name="bem_vindo">Bem Vindo!</string>
    <string name="buscar_exerc_cio">Buscar exercício…</string>
    <string name="lista_de_exercicios">Lista de exercicios</string>
    <string name="registro">Registros</string>
    <string name="rotina_do_dia">Rotina do dia</string>
    <string name="manter_conectado">Manter Conectado</string>
    <string name="exportar_plano">Exportar Plano</string>
    <string name="imporatar_plano">Importar Plano</string>
    <string name="titulo_rotinas">Rotinas de %1$s</string>
    <string name="toque_para_adicionar">Toque para adicionar</string>
</resources>