<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    android:layout_marginBottom="12dp"
    android:layout_marginTop="4dp"
    app:cardBackgroundColor="#1b2838">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/txtViewNomeRotina"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/nome_da_rotina"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/txtViewDiaSemana"
            app:layout_constraintEnd_toStartOf="@id/imgBtnDeletaRotina"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0" />

        <TextView
            android:id="@+id/txtViewDiaSemana"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diasemana"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/txtViewNomeRotina"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageButton
            android:id="@+id/imgBtnDeletaRotina"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/deletar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_delete"
            app:tint="#F44336" />

        <ImageButton
            android:id="@+id/imgBtnEditRotina"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rotinas_editar"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgBtnDeletaRotina"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#3CD548" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
